Revision history for MooseX-Extended

{{$NEXT}}

          - Optional Syntax::Keyword::Try support
          - Rename repo from moosex-extreme to moosex-extended

0.26      2022-07-29 08:28:21 CEST

          - "naked" fields (those no writer, default, or builder) that cannot
            have a value set will now issue a warning. (thanks, tobyink)
          - `is => 'rwp'` is now supported
          - Use new version of B::Hooks::AtRuntime. Classes now remain
            immutable under the debugger. Thanks to haarg and Ben Morrow for
            following up on that.
          - Move perl critic deps to test dependencies and update
            dist.ini in the process. (thanks, waterkip!)

0.25      2022-06-16 16:02:05 CEST

          - `builder` can now accept a coderef (stolen from Moo). (thanks,
            tobyink)
          - Disable true/make_immutable when loaded via stringy eval (thanks,
            tobyink)

0.24      2022-06-14 19:15:53 CEST

          - Of *course* we found some important typos :)

0.23      2022-06-14 19:01:31 CEST

          - Add a tutorial

0.22      2022-06-12 11:04:07 CEST

          - A field's `init_arg` can now begin with an underscore. (thanks,
            tobyink!)
          - `field` is now only lazy if there's a builder or default.

0.21      2022-06-07 19:17:30 CEST

          - Remove some duplicate POD and make it easier to follow.

0.20      2022-06-07 18:40:47 CEST

          - You can now exclude the "field" and "param" functions
          - Add MooseX::Extended::Role::Custom (create your own Moose::Role)
          - Add MooseX::Extended::Custom (create your own Moose)
          - Add optional async/await support
          - Linux CI now includes v.5.36.0
          - Add optional multimethod support
          - We no longer use @_ inside signatured subs

0.10      2022-05-31 22:26:34 CEST

          - Added .gitignore and cleaned up dist.ini (thanks, haarg!)